# kagoshimaben_LLM

./: .gitignore  README.md  TRAINING.md  eval_prompts.txt  infer.py  pyproject.toml  requirements.txt  results_llmjp_after.md  results_llmjp_before.md  results_llmjp_loss.json  results_qwen3_after.md  results_qwen3_before.md  rules.md  run_all.sh  train.py  vocab_check.txt
data/: kagoshimaben_v0.jsonl  kagoshimaben_v1.jsonl  seed_standard.jsonl
